[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "retinanalysis"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "DRezeanu", email = "DRezeanu@uw.edu" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/DRezeanu/retinanalysis#readme"
Issues = "https://github.com/DRezeanu/retinanalysis/issues"
Source = "https://github.com/DRezeanu/retinanalysis"

[tool.hatch.version]
path = "src/retinanalysis/__about__.py"
