[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "retinanalysis"
version = "0.1"
description = 'An analysis pipeline package for MEA data, created for the Rieke/Manookin lab'
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "DRezeanu", email = "DRezeanu@uw.edu" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "hdf5storage",
  "progressbar2",
  "cython",
  "opencv-python",
  "matplotlib",
  "scikit-learn",
  "pybind11",
  "scipy==1.15",
  "numpy==2.2.6",
  "pandas",
  "seaborn",
  "datajoint",
  "ipywidgets",
  "matplotlib_venn",
  "torch",
  "torchaudio",
  "torchvision",
  "ipykernel",
  "xarray",
  "dask",
  "netCDF4",
  "bottleneck"]

[project.urls]
Documentation = "https://github.com/DRezeanu/retinanalysis#readme"
Issues = "https://github.com/DRezeanu/retinanalysis/issues"
Source = "https://github.com/DRezeanu/retinanalysis"
